2010-11-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Remove obsolete automake option `--output-directory'.
	This option has been deprecated since version 1.7 (2002/2003).
	* automake.in ($output_directory): Define to `.' unconditionally.
	(parse_arguments): Remove handling of equivalent options `-o' and
	`--output-directory'.
	* tests/outdir.test: Removed.
	* tests/no-outdir-option.test: New test.
	* tests/Makefile.am (TESTS): Updated.
	* NEWS: Updated.

2010-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Automake::Config: remove extra trailing semicolon.
	* lib/Automake/Config.in: Remove extra trailing semicolon.

	help4.test: fix botched heading comment.
	* tests/help4.test: Fixed the heading comment, since it
	didn't correctly describe what checks the testcase was
	supposed to perform.

	help2.test: add checks on aclocal too.
	* tests/help2.test: Check that also `aclocal --version' and
	`aclocal --help' work with configure.in and acinclude.m4 both
	broken.

2010-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New test on repeated automake options.
	* tests/repeated-options.test: New test, check that automake
	does not complain on repeated options, nor generate broken or
	incorrect makefiles.
	* tests/Makefile.am (TESTS): Updated.

2010-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures of silent-rules tests with Sun Fortran.
	* tests/silentf77.test: Strip from the make output some verbose
	messages possibly printed by the SunStudio fortran compilers, to
	avoid spurious failures.  Add a trailing `:' command.
	* tests/silentf90.test: Likewise.

2010-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures of silent5.test with Sun Fortran.
	* tests/silent5.test: Strip from the make output some verbose
	messages possibly printed by the SunStudio fortran compilers,
	to avoid spurious failures.  This bug has been there from the
	very first version of this test script.
