@@ -1,5 +1,11 @@
 2010-11-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Code cleanup after removal of option `--output-directory'.
+	* automake.in ($output_directory): Remove, it's unconditionally
+	defined to `.' and used only ...
+	(generate_makefile): ... in this subroutine, which now has been
+	edited and simplified accordingly.
+
 	Remove obsolete automake option `--output-directory'.
 	This option has been deprecated since version 1.7 (2002/2003).
 	* automake.in ($output_directory): Define to `.' unconditionally.
